small alignment fixes to footer and improvements to navbar

--- a/less/index.less
+++ b/less/index.less
@@ -8,6 +8,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
+  height: auto;
 }
 
 @backgroundRedPink: #E24140;
@@ -23,12 +24,13 @@ body {
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    height: 80px;
+    height: 60px;
     width: 95%;
     margin: 0 auto;
 
-    div {
+    .logo-container {
       display: inline-flex;
+      cursor: pointer;
     }
 
     .main-logo {
@@ -53,7 +55,7 @@ body {
       a {
         color: white;
         text-decoration: none;
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         text-transform: uppercase;
         font-weight: bold;
       }
@@ -190,12 +192,15 @@ section {
 }
 
 footer {
-  margin: 0 auto;
+  margin: 25px auto 0;
   background-color: black;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
   color: white;
+  position: relative;
+  bottom: 0;
+  width: 100%;
 
   ul li {
     display: inline;
@@ -208,8 +213,7 @@ footer {
     justify-content: space-between;
     font-size: 1.3rem;
     font-weight: bold;
-    margin-top: 15px;
-    padding: 0 15px;
+    padding: 10px 15px;
 
     ul {
 
@@ -219,7 +223,7 @@ footer {
       border-bottom: 1px solid #434343;
 
       li {
-        padding: 0px 36px;
+        padding: 0px 40px;
 
         a {
           color: white;
@@ -238,6 +242,7 @@ footer {
       border-radius: 100%;
       border: 1px solid #434343;
       margin: 0 -8px;
+      cursor: pointer;
     }
 
     .footer-media-list {
@@ -248,19 +253,22 @@ footer {
   
 
   .footer-info {
-    width: 95%;
+    width: 100%;
     font-size: 1.3rem;
     margin: 20px 0;
 
     ul {
       display: flex;
       flex-flow: row wrap;
-      justify-content: space-between;
-
+      justify-content: center;
+      align-items: baseline;
 
       li {
-        width: 24%;
+        width: 25%;
         margin: 0 auto;
+        display: flex;
+        flex-flow: column;
+        align-items: center;
         text-align: center;
       }
 
@@ -269,15 +277,20 @@ footer {
         font-size: 1.5rem;
       }
 
+      .footer-input {
+        width: 90%;
+      }
+
       input[type=text] {
         background-color: inherit;
         color: white;
         padding: 0 7px;
-        margin-right: -4px;
+        margin-right: -68px;
         height: 38px;
         outline: 0;
         border: 0.1rem solid #434343;
         border-right: none;
+        width: 100%;
       }
 
       input[type=text]:focus {
@@ -296,6 +309,7 @@ footer {
 
       span {
         color: @backgroundRedPink;
+        cursor: pointer;
       }
     }
   }
