--- a/less/shelters.less
+++ b/less/shelters.less
@@ -30,8 +30,9 @@ body {
     width: 95%;
     margin: 0 auto;
 
-    div {
+    .logo-container {
       display: inline-flex;
+      cursor: pointer;
     }
 
     .main-logo {
@@ -56,7 +57,7 @@ body {
       a {
         color: white;
         text-decoration: none;
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         text-transform: uppercase;
         font-weight: bold;
       }
@@ -230,6 +231,7 @@ footer {
       border-radius: 100%;
       border: 1px solid #434343;
       margin: 0 -8px;
+      cursor: pointer;
     }
 
     .footer-media-list {
@@ -249,7 +251,6 @@ footer {
       flex-flow: row wrap;
       justify-content: center;
       align-items: baseline;
-
 
       li {
         width: 24%;
@@ -297,6 +298,7 @@ footer {
 
       span {
         color: @backgroundRedPink;
+        cursor: pointer;
       }
     }
   }
